--- a/Bookstore-SPA/src/app/books/books.component.html
+++ b/Bookstore-SPA/src/app/books/books.component.html
@@ -1,3 +1,30 @@
-<p>
-  books works!
-</p>
+<div class="row">
+  <div class="col-3 mt-2 mb-2">
+    <div class="card mb-3">
+      <h3 class="card-header">Filter</h3>
+      <div class="card-body">
+        <h5>Genres</h5>
+        <hr>
+        <div class="list-group">
+          <a *ngFor="let genre of genres" [ngStyle]="genre==activateGenre? {'background-color':'lightgray'} : {'background-color':'white'}" class="list-group-item list-group-item-action" (click)="changeGenre(genre)">{{genre}}</a>
+        </div>
+        <h5 class="mt-3">Price</h5>
+        <hr>
+      </div>
+      
+      <div class="card-footer text-muted">
+        2 days ago
+      </div>
+    </div>
+  </div>
+  <div class="col-8">
+    <h3>Books</h3>
+    <div class="card bg-secondary mb-3" style="max-width: 20rem;">
+      <div class="card-header">Header</div>
+      <div class="card-body">
+        <h4 class="card-title">Secondary card title</h4>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+      </div>
+    </div>
+  </div>
+</div>
