--- a/Bookstore-SPA/src/styles.css
+++ b/Bookstore-SPA/src/styles.css
@@ -4,3 +4,6 @@
 @import '../node_modules/font-awesome/css/font-awesome.min.css';
 
 
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
