--- a/Bookstore-SPA/src/app/login/login.component.html
+++ b/Bookstore-SPA/src/app/login/login.component.html
@@ -1,3 +1,30 @@
-<p>
-  login works!
-</p>
+<div class="container mt-3 mb-3">
+  <h2 class="text-center mt-3 mb-3">Login</h2>
+  <div class="row justify-content-center align-items-center">
+      
+      <form (ngSubmit)="login()" #loginForm="ngForm">
+        <div class="form-group">
+          <label class="control-label" for="username">Username:</label>
+          <input type="text" id="username" class="form-control"  name="username"
+          required #username="ngModel" [(ngModel)]="model.username">
+          <div *ngIf="username.touched && username.invalid" class="text-danger">You need to provide username.</div>
+        </div>
+        <div class="form-group">
+          <label class="control-label" for="password">Password:</label>
+          <input type="password" id="password" class="form-control"  name="password"
+          required #password="ngModel" [(ngModel)]="model.password">
+          <div class="text-danger" *ngIf="password.invalid && password.touched" >You need to provide password.</div>
+         
+        </div>
+
+        
+        <button type="submit" [disabled]="!loginForm.valid" class="btn btn-success mb-3 mr-2 ml-5">Submit</button>
+        <button type="button" class="btn btn-danger mb-3" (click)="cancel()">Cancel</button>
+        <a [routerLink]="['/register']" class="card-link mb-3 mt-3"><h6>Don't have an account? Click here to register!</h6></a>
+      </form>
+
+      
+ 
+  </div>
+  
+</div>
