--- a/Bookstore-SPA/src/app/nav/nav.component.html
+++ b/Bookstore-SPA/src/app/nav/nav.component.html
@@ -14,10 +14,30 @@
     <img class="img-responsive" src="../assets/Bookstore.PNG" [routerLink]="['/home']" class = "img-responsive mb-3" width = "100%">
   </div>
   <div class="col">
-    <i class="fa fa-star mt-4 mr-3 ml-3 icon" [routerLink]="['/favourites']" style="font-size:48px;"></i>
-    <i class="fa fa-user mt-4 mr-3 icon"  [routerLink]="['/profile']" style="font-size:48px;"></i>
-    <i class="fa fa-shopping-cart mt-4 icon" [routerLink]="['/shoppingcart']" style="font-size:48px;"></i>
-  </div>
+    <div class="btn-group btn-group-toggle" data-toggle="buttons">
+      <button id="button-animated" type="button" class="btn btn-link">
+        <i class="fa fa-star mr-1 mt-1 ml-3 icon" [routerLink]="['/favourites']" style="font-size:48px;"></i>
+      </button>
+      
+      <div class="btn-group" dropdown >
+        <button id="button-basic" dropdownToggle type="button" class="btn btn-link" >
+          <i class="fa fa-user mr-1 mt-1 icon"  (click)="userProfile()" style="font-size:48px;"></i>
+        </button>
+        <ul   class="dropdown-menu" *ngIf="logged()">
+          <li role="menuitem"><a class="dropdown-item" [routerLink]="['/profile']">Profile</a></li>
+          <li role="menuitem"><a class="dropdown-item" (click)="logout()">Log out</a></li>
+        </ul>
+      </div>
+
+      <button id="button-animated" type="button" class="btn btn-link">
+        <i class="fa fa-shopping-cart icon" [routerLink]="['/shoppingcart']" style="font-size:48px;"></i>
+      </button>
+      
+      
+      
+    </div>
+  
+  </div> 
 </div>
   <nav id="nav" class="navbar-expand navbar-dark bg-primary rounded nav-fill">
     <ul class="navbar-nav">
@@ -31,7 +51,7 @@
               <button id="button-animated" dropdownToggle type="button" class="btn btn-primary">
                       <h4 class="nav-link  btn-3" >Books</h4>
               </button>
-              <ul id="dropdown-animated" *dropdownMenu class="dropdown-menu"
+              <ul id="dropdown-animated"  class="dropdown-menu"
                   role="menu">
                   <li role="menuitem"><a class="dropdown-item" *ngFor="let item of items" [routerLink]="['/books', item]">{{item}}</a></li>
               </ul>
