--- a/Bookstore-SPA/src/app/shopping-cart/shopping-cart.component.html
+++ b/Bookstore-SPA/src/app/shopping-cart/shopping-cart.component.html
@@ -7,11 +7,11 @@
 <div class="container">
 
   <section id="cart"> 
-    <div  *ngFor="let book of books">
-      <article class="product" *ngIf="book.inCart > 0">
-        <header>
-            <a class="remove">
-                <img src={{book.photoUrl}} alt="">
+    <div  *ngFor="let orderBook of orderBooks">
+      <article class="product" *ngIf="orderBook.quantity > 0">
+        <header (click)="remove(orderBook)">
+            <a class="remove" >
+                <img src={{orderBook.book.photoUrl}} alt="">
 
                 <h3>Remove product</h3>
             </a>
@@ -19,22 +19,22 @@
 
         <div class="content">
 
-            <h2>{{book.title}}</h2>
-            <h3>{{book.author}}</h3>
+            <h2>{{orderBook.book.title}}</h2>
+            <h3>{{orderBook.book.author}}</h3>
            
         </div>
 
         <footer class="content">
-            <span class="qt-minus" (click)="minusQty(book)">-</span>
-            <span class="qt">{{book.inCart}}</span>
-            <span class="qt-plus" (click)="addQty(book)">+</span>
+            <span class="qt-minus" (click)="minusQty(orderBook)">-</span>
+            <span class="qt">{{orderBook.quantity}}</span>
+            <span class="qt-plus" (click)="addQty(orderBook)">+</span>
 
             <h2 class="full-price">
-                {{book.price *book.inCart | number:'1.0-2'}} PLN
+                {{orderBook.book.price * orderBook.quantity | number:'1.0-2'}} PLN
             </h2>
 
             <h2 class="price">
-                {{book.price}} PLN
+                {{orderBook.book.price}} PLN
             </h2>
         </footer>
     </article>
@@ -57,7 +57,7 @@
 
       <div class="right">
           <h1 class="total">Total: {{total | number:'1.0-2'}} PLN</h1>
-          <button type="button" class="btn btn-primary btn-block">Go to summary</button>
+          <button type="button" class="btn btn-primary btn-block" (click)="order()">Go to summary</button>
       </div>
 
   </div>
