--- a/Bookstore-SPA/src/app/profile/profile.component.html
+++ b/Bookstore-SPA/src/app/profile/profile.component.html
@@ -1,3 +1,212 @@
-<p>
-  profile works!
-</p>
+<div class="row">
+  <div class="col-3 mt-2 mb-2">
+    <div class="card mb-3">
+      <h3 class="card-header">Tabs</h3>
+      <div class="card-body">
+        <button type="button" class="btn btn-primary btn-sm btn-block" (click)="addressesOn()">Addresses</button>
+        <button type="button" class="btn btn-primary btn-sm btn-block" (click)="ordersOn()">Orders</button>
+        <button type="button" class="btn btn-primary btn-sm btn-block" (click)="contactOn()">Contact</button>
+        <button type="button" class="btn btn-primary btn-sm btn-block" (click)="passwordOn()">Change password</button>
+      </div>
+    </div>
+  </div>
+  <div class="col-8">
+        <div class="row" *ngIf="passwordTab">
+
+          <p>Password</p>
+        </div>
+        <div class="row" *ngIf="addressesTab">
+          <div class="mt-3">
+            <h3 class="mb-3">Addresses</h3>
+          <table class="table table-hover">
+            <thead>
+              <tr>
+                <th scope="col">First Name</th>
+                <th scope="col">Last Name</th>
+                <th scope="col">Street</th>
+                <th scope="col">Home Number</th>
+                <th scope="col">Post Number</th>
+                <th scope="col">City</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr *ngFor="let addr of addresses" (click)="editAddressOn(addr)">
+                <td>{{addr.firstName}}</td>
+                <td>{{addr.lastName}}</td>
+                <td>{{addr.street}}</td>
+                <td>{{addr.homeNumber}}</td>
+                <td>{{addr.postNumber}}</td>
+                <td>{{addr.city}}</td>
+              </tr>
+            </tbody>
+          </table> 
+          <button type="button" class="btn btn-primary mb-5" (click)="newAddressOn()">Add new</button>
+          </div>
+          
+        </div>
+       
+        <div class="row" *ngIf="contactTab">
+          <p>Contact</p>
+        </div>
+        <div class="row" *ngIf="newAddressTab">
+          <form (ngSubmit)="newAddress()" #addressForm="ngForm"class="ml-3">
+            <div class="row">
+              <h3 class="mt-3 mb-3">New Address</h3>
+            </div>
+          <div class="row mt-3">
+            <div class="col">
+              <label for="first-name" class="control-label">First Name</label>
+              <input type="text" id="first-name" class="form-control"  name="firstName" [(ngModel)]="address.firstName"/>
+            </div>
+            <div class="col">
+              <label for="last-name" class="control-label">Last Name</label>
+              <input type="text" id="last-name" class="form-control"  name="lastName" [(ngModel)]="address.lastName"/>
+            </div>
+          </div>
+          <div class="row mt-3">
+            <div class="col-8">
+              <label for="street" class="control-label">Street</label>
+              <input type="text" id="street" class="form-control"  name="street" [(ngModel)]="address.street"/>
+    
+            </div>
+            <div class="col-4">
+              <label for="home-number" class="control-label">Home Number</label>
+              <input type="text" id="home-number" class="form-control"  name="home-number" [(ngModel)]="address.homeNumber"/>
+            </div>
+          </div>
+          <div class="row mt-3">
+            <div class="col">
+              <div class="row">
+                <div class="col">
+                  <label for="post-number" class="control-label">Post Number</label>
+                  <input type="text" id="post-number" class="form-control"  name="post-number" [(ngModel)]="address.postNumber"/>
+                </div>
+                <div class="col">
+                  <label for="city" class="control-label">City</label>
+                  <input type="text" id="city" class="form-control"  name="city" [(ngModel)]="address.city"/>
+                </div>
+              </div>
+            </div>
+            <div class="col"></div>
+          </div>
+          <div class="row mt-3">
+            <button type="submit" [disabled]="!addressForm.valid" class="btn btn-success mb-3 mr-2 ml-5">Submit</button>
+         <button type="button" class="btn btn-danger mb-3" (click)="addressesOn()">Cancel</button>
+          </div>
+          
+        </form>
+        </div>
+        <div class="row" *ngIf="editAddressTab">
+          <form (ngSubmit)="editAddress()" #addressForm="ngForm" class="ml-3">
+            <div class="row">
+              <h3 class="mt-3 mb-3">Edit Address</h3>
+            </div>
+            <div class="row mt-3">
+              <div class="col">
+                <label for="first-name" class="control-label">First Name</label>
+                <input type="text" id="first-name" class="form-control"  name="firstName" [(ngModel)]="address.firstName"/>
+              </div>
+              <div class="col">
+                <label for="last-name" class="control-label">Last Name</label>
+                <input type="text" id="last-name" class="form-control"  name="lastName" [(ngModel)]="address.lastName"/>
+              </div>
+            </div>
+            <div class="row mt-3">
+              <div class="col-8">
+                <label for="street" class="control-label">Street</label>
+                <input type="text" id="street" class="form-control"  name="street" [(ngModel)]="address.street"/>
+      
+              </div>
+              <div class="col-4">
+                <label for="home-number" class="control-label">Home Number</label>
+                <input type="text" id="home-number" class="form-control"  name="home-number" [(ngModel)]="address.homeNumber"/>
+              </div>
+            </div>
+            <div class="row mt-3">
+              <div class="col">
+                <div class="row">
+                  <div class="col">
+                    <label for="post-number" class="control-label">Post Number</label>
+                    <input type="text" id="post-number" class="form-control"  name="post-number" [(ngModel)]="address.postNumber"/>
+                  </div>
+                  <div class="col">
+                    <label for="city" class="control-label">City</label>
+                    <input type="text" id="city" class="form-control"  name="city" [(ngModel)]="address.city"/>
+                  </div>
+                </div>
+              </div>
+              <div class="col"></div>
+            </div>
+            <div class="row mt-3">
+              <button type="submit" [disabled]="!addressForm.valid" class="btn btn-success mb-3 mr-2 ml-5">Submit</button>
+              <button type="button" class="btn btn-danger mr-2 mb-3" (click)="deleteAddress()">Delete</button>
+              <button type="button" class="btn btn-danger mb-3" (click)="addressesOn()">Cancel</button>
+            </div>
+            
+          </form>
+        </div>
+        <div class="row" *ngIf="ordersTab">
+          <div class="mt-3">
+            <h3 class="mb-3">Orders</h3>
+          <table class="table table-hover">
+            <thead>
+              <tr>
+                <th scope="col">Number</th>
+                <th scope="col">Payment method</th>
+                <th scope="col">Shipping Date</th>
+                <th scope="col">Order Date</th>
+                <th scope="col">Total Price</th>
+                <th scope="col">Status</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr *ngFor="let ord of orders" (click)="viewOrderOn(ord)">
+                <td>{{ord.id}}</td>
+                <td>{{ord.paymentMethod}}</td>
+                <td>{{ord.shippingDate | date:'shortDate'}}</td>
+                <td>{{ord.orderDate | date:'shortDate'}}</td>
+                <td>{{ord.totalPrice}}</td>
+                <td>{{ord.status}}</td>
+              </tr>
+            </tbody>
+          </table> 
+          <button type="button" class="btn btn-primary mb-5" (click)="newAddressOn()">Add new</button>
+          </div>
+          
+        </div>
+        <div class="row" *ngIf="orderViewTab">
+          <div class="container mt-5">
+            <h3>Order number {{order.id}}</h3>
+            <h4 class="mt-3">Payment method</h4>
+            <p>{{order.paymentMethod}}</p>
+         
+          <h4>Shipment Address</h4>
+          <p><b>Street:</b> {{order.street}}</p>
+          <p><b>Home Number:</b> {{order.homeNumber}}</p>
+          <p><b>Post Number:</b> {{order.postNumber}}</p>
+          <p><b>City:</b> {{order.city}}</p>
+          <h4>Ordered Books</h4>
+          </div>
+          
+          <table class="table table-hover">
+            <thead>
+              <tr>
+                <th scope="col">Author</th>
+                <th scope="col">Title</th>
+                <th scope="col">Quantity</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr *ngFor="let book of order.books">
+                <td>{{book.book.author}}</td>
+                <td>{{book.book.title}}</td>
+                <td>{{book.quantity}}</td>
+              </tr>
+            </tbody>
+          </table> 
+        </div>
+  </div>
+</div>
+
+
+
