--- a/Bookstore-SPA/src/app/books/book-detail/book-detail.component.css
+++ b/Bookstore-SPA/src/app/books/book-detail/book-detail.component.css
@@ -17,3 +17,27 @@
     transition-duration: 500ms;
     transition-timing-function: ease-out;
 }
+
+.best {
+    display: block; 
+    width: 100%;
+   
+    border: solid 1px black;
+
+}
+
+.card {
+    width:  auto;
+    height: auto;
+}
+
+.image-card {
+    max-width: 200px;
+}
+.card-hover:hover {
+    transform: scale(1.02);
+    box-shadow: 1px 1px 2px lightslategray .2;
+    transition-duration: 500ms;
+    cursor: pointer;
+    transition-timing-function: ease-out;
+  }
