--- a/Bookstore-SPA/src/app/books/book-detail/book-detail.component.html
+++ b/Bookstore-SPA/src/app/books/book-detail/book-detail.component.html
@@ -51,6 +51,31 @@
 <div class="row mt-3">
   <div class="ml-3">
     <h2>Bestsellers</h2>
+    <div class="container best mb-5">
+      <div class="row">
+        <div class="card bg-secondary mb-3 card-hover ml-4 mt-3 mr-2"  *ngFor="let book of books">
+          <div class="row">
+            <div class="col-10">
+              <h5 class="card-title mt-2 ml-5 mb-1">{{book.title}} </h5>
+            </div>
+            <div class="col-2">
+            </div>
+          </div>
+          
+          
+          <div (click)="goToDetail(book.id)">
+            
+            <h6 class="card-title mb-1 ml-5">{{book.author}}</h6>
+            <div class="card-body">
+            <img src={{book.photoUrl}} alt="C" class="image-card">
+          </div>
+          </div>
+          
+        </div>
+      </div>
+       
+     
+    </div>
   </div>
   
 </div>
