--- a/Bookstore-SPA/src/app/books/books.component.css
+++ b/Bookstore-SPA/src/app/books/books.component.css
@@ -27,6 +27,7 @@
     transform: scale(1.03);
     box-shadow: 1px 1px 2px lightslategray .2;
     transition-duration: 500ms;
+    cursor: pointer;
     transition-timing-function: ease-out;
   }
 
