--- a/Bookstore-SPA/src/app/books/book-detail/book-detail.component.html
+++ b/Bookstore-SPA/src/app/books/book-detail/book-detail.component.html
@@ -53,7 +53,7 @@
     <h2>Bestsellers</h2>
     <div class="container best mb-5">
       <div class="row">
-        <div class="card bg-secondary mb-3 card-hover ml-4 mt-3 mr-2"  *ngFor="let book of books">
+        <div class="card card-book bg-secondary mb-3 card-hover ml-4 mt-3 mr-2"  *ngFor="let book of books">
           <div class="row">
             <div class="col-10">
               <h5 class="card-title mt-2 ml-5 mb-1">{{book.title}} </h5>
