--- a/Bookstore-SPA/src/app/books/books.component.html
+++ b/Bookstore-SPA/src/app/books/books.component.html
@@ -1,3 +1,5 @@
+
+
 <div class="row">
   <div class="col-3 mt-2 mb-2">
     <div class="card mb-3">
@@ -43,7 +45,14 @@
     </div>
   </div>
   <div class="col-8">
-    <div class="row">
+    <div class="container" *ngIf="!loaded">
+      <div class="row-load">
+        <div class="spinner-border text-dark" role="status">
+          <span class="sr-only">Loading...</span>
+        </div>
+      </div>
+    </div>
+    <div class="row" *ngIf="loaded">
       <div class="col-5">
         <h3 class="mt-2">Books</h3>
       </div>
