--- a/Bookstore-SPA/src/app/home/home.component.html
+++ b/Bookstore-SPA/src/app/home/home.component.html
@@ -42,7 +42,7 @@
       <div class="card bg-secondary mb-3 card-hover ml-4 mt-3"  *ngFor="let book of books">
         <div class="row">
           <div class="col-10">
-            <h5 class="card-title mt-2 ml-5 mb-1">{{book.title}} </h5>
+            <h5 class="card-title mt-2 ml-5 mr-1 mb-1">{{book.title}} </h5>
           </div>
           <div class="col-2">
           </div>
