--- a/Bookstore-SPA/src/app/login/login.component.css
+++ b/Bookstore-SPA/src/app/login/login.component.css
@@ -2,4 +2,10 @@ input.ng-invalid.ng-touched {
     border: 1px solid red;
   }
 
- 
+  .row-load {
+    text-align: center;
+    display: inline-block;
+    margin-left: 50%;
+    margin-top: 100px;
+    margin-bottom: 100px;
+}
