--- a/Bookstore-SPA/src/app/login/login.component.html
+++ b/Bookstore-SPA/src/app/login/login.component.html
@@ -1,4 +1,11 @@
-<div class="container mt-3 mb-3">
+<div class="container" *ngIf="!loaded">
+  <div class="row-load">
+    <div class="spinner-border text-dark" role="status">
+      <span class="sr-only">Loading...</span>
+    </div>
+  </div>
+</div>
+<div class="container mt-3 mb-3" *ngIf="loaded">
   <h2 class="text-center mt-3 mb-3">Login</h2>
   <div class="row justify-content-center align-items-center">
       
