--- a/Bookstore-SPA/src/app/nav/nav.component.css
+++ b/Bookstore-SPA/src/app/nav/nav.component.css
@@ -37,5 +37,21 @@
     transform: scale(1.1); 
   transition: all 250ms linear;
   }
+  .list-group {
+    position: absolute;
+  }
+
+  .list-group-item {
+    z-index: 999;
+    position: relative;
+    cursor: pointer;
+    height: auto;
+
+  }
+
+  .list-group-item:hover {
+    background-color: lightgrey;
+    transition: all 250ms linear;
+  }
 
  
