--- a/Bookstore-SPA/src/app/profile/profile.component.html
+++ b/Bookstore-SPA/src/app/profile/profile.component.html
@@ -11,9 +11,50 @@
     </div>
   </div>
   <div class="col-8">
+    
         <div class="row" *ngIf="passwordTab">
-
-          <p>Password</p>
+          <h3 class="mb-3 mt-3">Change password</h3>
+          <div class="container mt-5" *ngIf="loaded">
+            <div class="row justify-content-center align-items-center">
+              <form [formGroup]="registerForm" (ngSubmit)="changePassword()">
+                
+                <div class="form-group">
+                  <input type="password" class="form-control"  formControlName="currentPassword" 
+                  [ngClass]="{'is-invalid': registerForm.get('currentPassword').errors && registerForm.get('currentPassword').touched}"
+                  placeholder="Current password">
+                  <div class="invalid-feedback" *ngIf="registerForm.get('currentPassword').hasError('required') && registerForm.get('currentPassword').touched">Current password is required</div>
+                </div>
+              
+                <div class="form-group">
+                  <input type="password" class="form-control"  formControlName="password" 
+                  [ngClass]="{'is-invalid': registerForm.get('password').errors && registerForm.get('password').touched}"
+                  placeholder="Password">
+                  <div class="invalid-feedback" *ngIf="registerForm.get('password').hasError('required') && registerForm.get('password').touched">Password is required</div>
+                  <div class="invalid-feedback" *ngIf="registerForm.get('password').hasError('minlength') && registerForm.get('password').touched">Password must be at least 4 characters</div>
+                  <div class="invalid-feedback" *ngIf="registerForm.get('password').hasError('maxlength') && registerForm.get('password').touched">Password cannot exceed 8 characters</div>
+                </div>
+              
+                <div class="form-group">
+                  <input type="password" class="form-control"  formControlName="passwordConfirm" placeholder="Confirm Password"
+                  [ngClass]="{'is-invalid': registerForm.get('passwordConfirm').errors && registerForm.get('passwordConfirm').touched ||
+                  registerForm.get('passwordConfirm').touched && registerForm.hasError('mismatch')}">
+                  <div class="invalid-feedback" *ngIf="registerForm.get('passwordConfirm').hasError('required') && 
+                  registerForm.get('passwordConfirm').touched">Password confirmation is required</div>
+                  <div class="invalid-feedback" *ngIf="registerForm.hasError('mismatch') && 
+                  registerForm.get('passwordConfirm').touched">Password must match</div>
+              
+                </div>
+              
+              
+                <div class="form-group text-center">
+                  <button class="btn btn-success" [disabled]="!registerForm.valid" type="submit">Change</button>
+                </div>
+                
+              </form>
+              
+            </div>
+            </div>
+            
         </div>
         <div class="row" *ngIf="addressesTab">
           <div class="mt-3">
