Worker and admin added to User, guards for worker and admin

--- a/Bookstore-SPA/src/app/nav/nav.component.html
+++ b/Bookstore-SPA/src/app/nav/nav.component.html
@@ -66,7 +66,7 @@
               <button id="button-animated" dropdownToggle type="button" class="btn btn-primary">
                       <h4 class="nav-link  btn-3" >Books</h4>
               </button>
-              <ul id="dropdown-animated"  class="dropdown-menu"
+              <ul id="dropdown-animated"  class="dropdown-menu mt-4"
                   role="menu">
                   <li role="menuitem"><a class="dropdown-item" *ngFor="let item of items" [routerLink]="['/books', item]">{{item}}</a></li>
               </ul>
