--- a/Bookstore-SPA/src/app/admin/admin.component.html
+++ b/Bookstore-SPA/src/app/admin/admin.component.html
@@ -1,3 +1,174 @@
-<p>
-  admin works!
-</p>
+<div class="conainer mt-3 mb-3">
+  <div>
+    <tabset>
+      <tab heading="Orders" id="tab1">
+        <div class="row" *ngIf="!viewOrder">
+          <h3 class="mt-3">Orders</h3>
+          <hr>
+          <div class="row">
+           
+            <div class="col-2">
+              <label for="exampleSelect1" class="mt-3"><h5>Sort by:</h5></label>
+            </div>
+            <div class="col-5">
+              <div class="form-group mt-1">
+                <select class="form-control" id="select" [(ngModel)]="sortOption" (click)="onSort()">
+                  <option>-</option>
+                  <option>Sort by price - ascending</option>
+                  <option>Sort by price - descending</option>
+                  <option>Sort from A-Z</option>
+                  <option>Sort from Z-A</option>
+                </select>
+              </div>
+              
+            </div>
+          </div>
+          <table class="table table-hover">
+            <thead>
+              <tr>
+                <th scope="col">Number</th>
+                <th scope="col">Payment method</th>
+                <th scope="col">Shipping Date</th>
+                <th scope="col">Order Date</th>
+                <th scope="col">Total Price</th>
+                <th scope="col">Status</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr *ngFor="let ord of orders" (click)="viewOrderOn(ord)">
+                <td>{{ord.id}}</td>
+                <td>{{ord.paymentMethod}}</td>
+                <td>{{ord.shippingDate | date:'shortDate'}}</td>
+                <td>{{ord.orderDate | date:'shortDate'}}</td>
+                <td>{{ord.totalPrice}}</td>
+                <td>{{ord.status}}</td>
+              </tr>
+            </tbody>
+          </table> 
+        </div>
+        <div class="row" *ngIf="viewOrder">
+          <app-edit-order [order]="order" (leave)="onLeaveOrder($event)"></app-edit-order>
+        </div>
+
+      </tab>
+      <tab heading="Books">
+        <h3 class="mt-3">Books</h3>
+        <hr>
+        
+
+<div class="row" *ngIf="!bookNew && !bookEdit">
+  <div class="col-3 mt-2 mb-2">
+    <div class="card mb-3">
+      <h3 class="card-header">Filter</h3>
+      <div class="card-body">
+        <h5>Genres</h5>
+        <hr>
+        <div class="list-group">
+          <a *ngFor="let genre of genres" [ngStyle]="genre==activateGenre? {'background-color':'lightgray'} : {'background-color':'white'}" class="list-group-item list-group-item-action" (click)="changeGenre(genre)">{{genre}}</a>
+        </div>
+        <h5 class="mt-3">Price</h5>
+      <div class="row">
+        <div class="col">
+          <div class="form-group">
+            <label class="col-form-label" for="inputDefault">Min</label>
+            <input type="number" class="form-control" [(ngModel)]="value" placeholder="Min" id="inputDefault">
+        </div>
+        </div>
+        <div class="col">
+          <div class="form-group">
+            <label class="col-form-label" for="inputDefault">Max</label>
+            <input type="number" class="form-control" [(ngModel)]="highValue" placeholder="Min" id="inputDefault">
+        </div>
+        </div>
+      </div>  
+
+        <ng5-slider [(value)]="value" [(highValue)]="highValue" [options]="options"></ng5-slider>
+        <hr>
+      </div>
+
+      
+      <h5 class="ml-3">Only sales</h5>
+      <div class="form-check mb-2 ml-3">
+      <label class="form-check-label">
+        <input class="form-check-input" type="checkbox" [(ngModel)]="sales">
+        Yes
+      </label>
+    </div>
+
+
+      <button id="button-animated" type="button" class="btn btn-primary btn-3" (click)="filterBooks()">Filter</button>
+      
+    </div>
+  </div>
+  <div class="col-8">
+    <div class="container" *ngIf="!loaded">
+      <div class="row-load">
+        <div class="spinner-border text-dark" role="status">
+          <span class="sr-only">Loading...</span>
+        </div>
+      </div>
+    </div>
+    <div class="row" *ngIf="loaded">
+      <div class="col-5">
+      </div>
+      <div class="col-2">
+        <label for="exampleSelect1" class="mt-3"><h5>Sort by:</h5></label>
+      </div>
+      <div class="col-5">
+        <div class="form-group mt-1">
+          <select class="form-control" id="select" [(ngModel)]="sortOption" (click)="onSort()">
+            <option>-</option>
+            <option>Sort by price - ascending</option>
+            <option>Sort by price - descending</option>
+            <option>Sort from A-Z</option>
+            <option>Sort from Z-A</option>
+          </select>
+        </div>
+        
+      </div>
+    </div>
+    <button class="btn btn-success mr-2 ml-2 mt-4" (click)="addNewBook()">Add book</button>
+    <table class="table table-hover">
+      <thead>
+        <tr>
+          <th scope="col">Id</th>
+          <th scope="col">Title</th>
+          <th scope="col">Author</th>
+          <th scope="col">Stock</th>
+          <th scope="col">Saled</th>
+          <th scope="col">Price</th>
+          <th scope="col">On sale</th>
+          <th scope="col">Sale price</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let book of books" (click)="viewBookOn(book)">
+          <td>{{book.id}}</td>
+          <td>{{book.title}}</td>
+          <td>{{book.author}}</td>
+          <td>{{book.stock}}</td>
+          <td>{{book.saled}}</td>
+          <td>{{book.price}}</td>
+          <td>{{book.onSale}}</td>
+          <td>{{book.salePrice}}</td>
+        </tr>
+      </tbody>
+    </table> 
+  </div>
+  
+</div>
+<div class="row" *ngIf="bookNew">
+  <app-new-book (leave)="onLeaveBook()"></app-new-book>
+</div>
+<div class="row" *ngIf="bookEdit">
+  <app-edit-book (leave)="onLeaveBook()"></app-edit-book>
+</div>
+        
+      </tab>
+      <tab heading="Banners">
+        <h3 class="mt-3">Banners</h3>
+        <hr>
+      </tab>
+    </tabset>
+  </div>
+</div>
