Deleting and updating orders

--- a/Bookstore-SPA/src/app/books/books.component.html
+++ b/Bookstore-SPA/src/app/books/books.component.html
@@ -61,7 +61,7 @@
       </div>
       <div class="col-5">
         <div class="form-group mt-1">
-          <select class="form-control" id="select" [(ngModel)]="sortOption" (click)="onSort()">
+          <select class="form-control" [(ngModel)]="sortOption" (click)="onSort()">
             <option>-</option>
             <option>Sort by price - ascending</option>
             <option>Sort by price - descending</option>
