--- a/Bookstore-SPA/src/app/admin/admin.component.html
+++ b/Bookstore-SPA/src/app/admin/admin.component.html
@@ -7,21 +7,20 @@
           <hr>
           <div class="row">
            
-            <div class="col-2">
+            <div class="col-4">
               <label for="exampleSelect1" class="mt-3"><h5>Sort by:</h5></label>
             </div>
-            <div class="col-5">
-              <div class="form-group mt-1">
-                <select class="form-control" id="select" [(ngModel)]="sortOption" (click)="onSort()">
-                  <option>-</option>
-                  <option>Sort by price - ascending</option>
-                  <option>Sort by price - descending</option>
-                  <option>Sort from A-Z</option>
-                  <option>Sort from Z-A</option>
-                </select>
-              </div>
-              
+            <div class="col-8">
+              <select class="form-control" [(ngModel)]="status" (click)="sortByStatus()">
+                <option>All</option>
+                <option>Placed</option>
+                <option>Collected</option>
+                <option>Packed</option>
+                <option>Sent</option>
+                <option>Received</option>
+              </select>
             </div>
+           
           </div>
           <table class="table table-hover">
             <thead>
