--- a/Bookstore-SPA/src/app/admin/edit-book/edit-book.component.html
+++ b/Bookstore-SPA/src/app/admin/edit-book/edit-book.component.html
@@ -1,4 +1,79 @@
 <button type="button" class="btn btn-primary mt-4 mb-3" (click)="leaveBook()">Return</button>
-<p>
-  edit-book works!
-</p>
+
+  <div class="row">
+      <div class="alert alert-info" *ngIf="editForm.dirty">
+        <strong>Information:</strong> You have made changes. Any unsaved changes will be lost!
+      </div>
+  </div>
+    
+        <h2>Edit book</h2>
+
+          <div class="row">
+ 
+              <form #editForm="ngForm" id="editForm" (ngSubmit)="editBook()" class="form-inline">
+                <div class="container">
+                  <div class="row">
+                    <h5>Title</h5>
+                  <input type="text" name="title" class="form-control w-100" rows="1" [(ngModel)]="book.title">
+                  <h5>Author</h5>
+                  <input type="text" name="author" class="form-control w-100" rows="1" [(ngModel)]="book.author">
+                  <h5 class="mt-3">Description</h5>
+                  <textarea name="description" rows="5" class="form-control w-100" [(ngModel)]="book.description"></textarea>
+                  <h5>Photo Url</h5>
+                  <input type="text" name="photoUrl" class="form-control w-100" rows="1" [(ngModel)]="book.photoUrl">
+                  <h5 class="mt-3">Stock</h5>
+                  <input type="number" name="stock" class="form-control w-100" rows="1" [(ngModel)]="book.stock">
+                  <h5 class="mt-3">Price</h5>
+                  <input type="number" name="price" class="form-control w-100" rows="1" [(ngModel)]="book.price">
+                  <h5 class="mt-3">On Sale</h5>
+                  </div>
+                  <div class="row">
+                    <div class="form-check">
+                      <label class="form-check-label">
+                        <input class="form-check-input" type="checkbox" [(ngModel)]="book.onSale">
+                        On Sale
+                      </label>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <h5 class="mt-3">Sale Price</h5>
+                    <input type="number" name="salePrice" class="form-control w-100" rows="1" [(ngModel)]="book.salePrice">
+                  </div>
+                  <div class="row">
+                    <h5>Publisher</h5>
+                    <input type="text" name="publisher" class="form-control w-100" rows="1" [(ngModel)]="book.publisher">
+                    <h5>Genre</h5>
+                  </div>
+                  <div class="row">
+                    <div class="form-group">
+                      <select class="form-control w-100" [(ngModel)]="book.genre">
+                        <option *ngFor="let genre of genres" >{{genre}}</option>
+                      </select>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <h5>Language</h5>
+                    <input type="text" name="language" class="form-control w-100" rows="1" [(ngModel)]="book.language">
+                  </div>
+                  <div class="row">
+                   <h5>Publish date</h5>
+                  </div>
+                  <div class="row">
+                    <div class="col-xs-12 col-12 col-md-4 form-group">
+                      <input type="text"
+                             placeholder="Datepicker"
+                             class="form-control"
+                             bsDatepicker
+                             [(ngModel)]="book.publishingDate">
+                    </div>
+                  </div>  
+                </div>
+               
+                
+                <button type="submit" class="btn btn-success mr-2 ml-2 mt-4" [disabled]="!editForm.dirty">Submit</button>
+                <button type="button" class="btn btn-primary mt-4" (click)="deleteBook()">Delete</button>
+                <button type="button" class="btn btn-primary mt-4" (click)="leaveBook()">Cancel</button>
+              </form>
+          
+            
+          </div>
